--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,10 @@
-
+numpy==1.26.2
+pandas==2.1.3
+openai==1.3.5
+nltk==3.8.1
+python-dotenv==1.0.0
+tqdm==4.66.1
+faiss-cpu==1.7.4
+annoy==1.17.3
+langchain==0.0.344
+rouge_score==0.1.2
